[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.164" , features = ["derive"]}
sha2 = "0.10.7"
walkdir = "2"
actix-web = "4"
serde_json = "1.0"
web3 = "0.18.0"
hex = { version = "0.4", default-features = false }
juniper = "0.15"
actix-web-lab = "0.19.1"

env_logger = "0.10"
log = "0.4"
actix-cors = "0.6.4"
